crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_t_string_concat_2_error.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
ParseError {
    error: OtherError(
        "cannot mix t-string literals with string or bytes literals",
    ),
    location: 0..17,
}
