crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_t_string_concat_4.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(
                8,
            ),
            range: 0..31,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 0..31,
                    value: TStringValue {
                        inner: Concatenated(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..8,
                                        node_index: NodeIndex(
                                            0,
                                        ),
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                TString(
                                    TString {
                                        range: 9..22,
                                        node_index: NodeIndex(
                                            5,
                                        ),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 11..16,
                                                    node_index: NodeIndex(
                                                        1,
                                                    ),
                                                    value: "world",
                                                },
                                            ),
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 16..21,
                                                    node_index: NodeIndex(
                                                        4,
                                                    ),
                                                    expression: StringLiteral(
                                                        ExprStringLiteral {
                                                            node_index: NodeIndex(
                                                                3,
                                                            ),
                                                            range: 17..20,
                                                            value: StringLiteralValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 17..20,
                                                                        node_index: NodeIndex(
                                                                            2,
                                                                        ),
                                                                        value: "!",
                                                                        flags: StringLiteralFlags {
                                                                            quote_style: Double,
                                                                            prefix: Empty,
                                                                            triple_quoted: false,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: TStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                Literal(
                                    StringLiteral {
                                        range: 23..31,
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        value: "again!",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
