crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_tstring_nested_concatenation_string_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..16,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..16,
                value: TString(
                    ExprTString {
                        node_index: NodeIndex(None),
                        range: 0..16,
                        value: TStringValue {
                            inner: Single(
                                TString {
                                    range: 0..16,
                                    node_index: NodeIndex(None),
                                    elements: [
                                        Interpolation(
                                            InterpolatedElement {
                                                range: 2..15,
                                                node_index: NodeIndex(None),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 3..6,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    InterpolatedStringFormatSpec {
                                                        range: 7..14,
                                                        node_index: NodeIndex(None),
                                                        elements: [
                                                            Interpolation(
                                                                InterpolatedElement {
                                                                    range: 7..14,
                                                                    node_index: NodeIndex(None),
                                                                    expression: StringLiteral(
                                                                        ExprStringLiteral {
                                                                            node_index: NodeIndex(None),
                                                                            range: 8..13,
                                                                            value: StringLiteralValue {
                                                                                inner: Concatenated(
                                                                                    ConcatenatedStringLiteral {
                                                                                        strings: [
                                                                                            StringLiteral {
                                                                                                range: 8..10,
                                                                                                node_index: NodeIndex(None),
                                                                                                value: "",
                                                                                                flags: StringLiteralFlags {
                                                                                                    quote_style: Single,
                                                                                                    prefix: Empty,
                                                                                                    triple_quoted: false,
                                                                                                    unclosed: false,
                                                                                                },
                                                                                            },
                                                                                            StringLiteral {
                                                                                                range: 11..13,
                                                                                                node_index: NodeIndex(None),
                                                                                                value: "",
                                                                                                flags: StringLiteralFlags {
                                                                                                    quote_style: Single,
                                                                                                    prefix: Empty,
                                                                                                    triple_quoted: false,
                                                                                                    unclosed: false,
                                                                                                },
                                                                                            },
                                                                                        ],
                                                                                        value: "",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: TStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
