crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_tstring_nested_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
assertion_line: 716
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..15,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(None),
                    range: 0..15,
                    value: TStringValue {
                        inner: Single(
                            TString {
                                range: 0..15,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 2..14,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 3..6,
                                                    id: Name("foo"),
                                                    ctx: Load,
                                                },
                                            ),
                                            expression_source: "foo",
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: Some(
                                                InterpolatedStringFormatSpec {
                                                    range: 7..13,
                                                    node_index: NodeIndex(None),
                                                    elements: [
                                                        Interpolation(
                                                            InterpolatedElement {
                                                                range: 7..13,
                                                                node_index: NodeIndex(None),
                                                                expression: Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 8..12,
                                                                        id: Name("spec"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                expression_source: "spec",
                                                                debug_text: None,
                                                                conversion: None,
                                                                format_spec: None,
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                flags: TStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
